//go:build integration
// +build integration

package grpc_contracts

import (
	"context"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	// Import generated protobuf clients (will be generated in T019-T027)
	// alertpb "aegisshield/shared/proto/alerting-engine"
)

// T013: Alerting Engine Service gRPC Contract Tests
// Constitutional Principle: Comprehensive Testing - Write failing tests first

func TestAlertingEngineService_CreateRule_ShouldFailInitially(t *testing.T) {
	// This test MUST fail initially - we haven't implemented the service yet
	// Following TDD: Red -> Green -> Refactor

	t.Skip("INTENTIONALLY FAILING: Alerting Engine Service not implemented yet (T013)")

	// Arrange
	conn, err := grpc.Dial("alerting-engine:9003", grpc.WithInsecure())
	require.NoError(t, err, "Should connect to alerting engine service")
	defer conn.Close()

	// client := alertpb.NewAlertingEngineServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	// Act & Assert
	t.Run("should create suspicious transaction rule", func(t *testing.T) {
		// Test rule creation - FR-010 from spec
		request := &alertpb.CreateRuleRequest{
			Name:        "Large Cash Transaction Alert",
			Description: "Alert on cash transactions over $10,000",
			RuleType:    alertpb.RuleType_TRANSACTION_MONITORING,
			Conditions: []*alertpb.RuleCondition{
				{
					Field:    "transaction.amount",
					Operator: alertpb.Operator_GREATER_THAN,
					Value:    "10000.00",
				},
				{
					Field:    "transaction.payment_method",
					Operator: alertpb.Operator_EQUALS,
					Value:    "CASH",
				},
			},
			Actions: []*alertpb.RuleAction{
				{
					ActionType: alertpb.ActionType_CREATE_ALERT,
					Priority:   alertpb.Priority_HIGH,
					Recipients: []string{"compliance@aegisshield.com", "risk@aegisshield.com"},
					Template:   "large_cash_transaction_alert",
				},
				{
					ActionType: alertpb.ActionType_FLAG_ENTITY,
					FlagType:   alertpb.FlagType_SUSPICIOUS_ACTIVITY,
					Duration:   "24h",
				},
			},
			Enabled:   true,
			CreatedBy: "compliance_officer_1",
		}

		// response, err := client.CreateRule(ctx, request)
		// assert.NoError(t, err, "Should successfully create rule")
		// assert.NotEmpty(t, response.RuleId, "Should return rule ID")
		// assert.Equal(t, request.Name, response.Rule.Name, "Should preserve rule name")
		// assert.True(t, response.Rule.Enabled, "Should be enabled by default")
		// assert.NotZero(t, response.Rule.CreatedAt, "Should set creation timestamp")
	})

	t.Run("should create pattern-based rule for structured money laundering", func(t *testing.T) {
		// Test complex pattern rules - FR-011 from spec
		request := &alertpb.CreateRuleRequest{
			Name:        "Structured Money Laundering Pattern",
			Description: "Detect transactions just under reporting thresholds",
			RuleType:    alertpb.RuleType_PATTERN_DETECTION,
			Pattern: &alertpb.TransactionPattern{
				TimeWindow: "24h",
				MinCount:   3,
				MaxCount:   10,
				AmountRange: &alertpb.AmountRange{
					Min: "9000.00",
					Max: "9999.99",
				},
				Conditions: []*alertpb.PatternCondition{
					{
						Field:      "transaction.sender_entity_id",
						Constraint: alertpb.Constraint_SAME_VALUE,
					},
					{
						Field:      "transaction.receiver_entity_id",
						Constraint: alertpb.Constraint_DIFFERENT_VALUES,
					},
				},
			},
			Actions: []*alertpb.RuleAction{
				{
					ActionType: alertpb.ActionType_CREATE_ALERT,
					Priority:   alertpb.Priority_CRITICAL,
					Recipients: []string{"aml@aegisshield.com"},
					Template:   "structuring_pattern_alert",
				},
				{
					ActionType:      alertpb.ActionType_ESCALATE,
					EscalationLevel: alertpb.EscalationLevel_REGULATORY,
					AutoEscalate:    true,
				},
			},
			Enabled:   true,
			CreatedBy: "aml_analyst_1",
		}

		// response, err := client.CreateRule(ctx, request)
		// assert.NoError(t, err, "Should successfully create pattern rule")
		// assert.NotEmpty(t, response.RuleId, "Should return rule ID")
		// assert.Equal(t, alertpb.RuleType_PATTERN_DETECTION, response.Rule.RuleType, "Should be pattern detection rule")
		// assert.NotNil(t, response.Rule.Pattern, "Should include pattern definition")
	})

	t.Run("should validate rule conditions", func(t *testing.T) {
		// Test rule validation - data integrity principle
		invalidRequest := &alertpb.CreateRuleRequest{
			Name:       "", // Invalid: empty name
			RuleType:   alertpb.RuleType_TRANSACTION_MONITORING,
			Conditions: []*alertpb.RuleCondition{}, // Invalid: no conditions
			Actions:    []*alertpb.RuleAction{},    // Invalid: no actions
		}

		// _, err := client.CreateRule(ctx, invalidRequest)
		// assert.Error(t, err, "Should reject invalid rule")
		// assert.Equal(t, codes.InvalidArgument, status.Code(err), "Should return InvalidArgument status")
	})
}

func TestAlertingEngineService_EvaluateTransaction_ShouldFailInitially(t *testing.T) {
	t.Skip("INTENTIONALLY FAILING: Alerting Engine Service not implemented yet (T013)")

	conn, err := grpc.Dial("alerting-engine:9003", grpc.WithInsecure())
	require.NoError(t, err)
	defer conn.Close()

	// client := alertpb.NewAlertingEngineServiceClient(conn)
	ctx := context.Background()

	t.Run("should evaluate transaction against all active rules", func(t *testing.T) {
		// Test real-time evaluation - FR-012 from spec
		request := &alertpb.EvaluateTransactionRequest{
			Transaction: &alertpb.Transaction{
				Id:               "txn-789",
				Amount:           15000.00,
				Currency:         "USD",
				PaymentMethod:    "WIRE_TRANSFER",
				SenderEntityId:   "entity-123",
				ReceiverEntityId: "entity-456",
				Timestamp:        time.Now().Unix(),
				Metadata: map[string]string{
					"source_country":      "US",
					"destination_country": "CH", // Switzerland - high risk
					"purpose_code":        "INVESTMENT",
				},
			},
			EvaluationMode: alertpb.EvaluationMode_REAL_TIME,
		}

		// response, err := client.EvaluateTransaction(ctx, request)
		// assert.NoError(t, err, "Should evaluate transaction successfully")
		// assert.NotEmpty(t, response.EvaluationId, "Should return evaluation ID")
		// assert.GreaterOrEqual(t, response.RulesEvaluated, int32(1), "Should evaluate at least one rule")
		//
		// // Check for alerts generated
		// if response.AlertsGenerated > 0 {
		//     assert.NotEmpty(t, response.Alerts, "Should include generated alerts")
		//     for _, alert := range response.Alerts {
		//         assert.NotEmpty(t, alert.AlertId, "Should include alert ID")
		//         assert.NotEmpty(t, alert.RuleId, "Should reference triggering rule")
		//         assert.Contains(t, []alertpb.Priority{
		//             alertpb.Priority_LOW,
		//             alertpb.Priority_MEDIUM,
		//             alertpb.Priority_HIGH,
		//             alertpb.Priority_CRITICAL,
		//         }, alert.Priority, "Should have valid priority")
		//     }
		// }
	})

	t.Run("should handle batch transaction evaluation", func(t *testing.T) {
		// Test batch processing - scalability principle
		transactions := make([]*alertpb.Transaction, 1000) // 1000 transactions
		for i := 0; i < 1000; i++ {
			transactions[i] = &alertpb.Transaction{
				Id:               fmt.Sprintf("batch-txn-%d", i),
				Amount:           float64(1000 + i*10), // Varying amounts
				Currency:         "USD",
				PaymentMethod:    "ACH",
				SenderEntityId:   fmt.Sprintf("entity-%d", i%100),
				ReceiverEntityId: fmt.Sprintf("entity-%d", (i+50)%100),
				Timestamp:        time.Now().Add(-time.Duration(i) * time.Minute).Unix(),
			}
		}

		request := &alertpb.EvaluateBatchRequest{
			Transactions:   transactions,
			EvaluationMode: alertpb.EvaluationMode_BATCH,
			BatchId:        "batch-001",
		}

		// response, err := client.EvaluateBatch(ctx, request)
		// assert.NoError(t, err, "Should evaluate batch successfully")
		// assert.Equal(t, int32(len(transactions)), response.TransactionsProcessed, "Should process all transactions")
		// assert.LessOrEqual(t, response.ProcessingTimeMs, int64(5000), "Should complete within 5 seconds")
	})

	t.Run("should perform pattern matching across time windows", func(t *testing.T) {
		// Test temporal pattern detection - FR-013 from spec
		request := &alertpb.EvaluatePatternRequest{
			EntityId: "entity-123",
			TimeWindow: &alertpb.TimeWindow{
				StartTime: time.Now().Add(-24 * time.Hour).Unix(),
				EndTime:   time.Now().Unix(),
			},
			PatternTypes: []alertpb.PatternType{
				alertpb.PatternType_STRUCTURING,
				alertpb.PatternType_ROUND_ROBIN,
				alertpb.PatternType_VELOCITY_CHECK,
			},
		}

		// response, err := client.EvaluatePattern(ctx, request)
		// assert.NoError(t, err, "Should evaluate patterns successfully")
		// assert.NotEmpty(t, response.EvaluationId, "Should return evaluation ID")
		//
		// if response.PatternsDetected > 0 {
		//     assert.NotEmpty(t, response.DetectedPatterns, "Should include detected patterns")
		//     for _, pattern := range response.DetectedPatterns {
		//         assert.NotEmpty(t, pattern.PatternId, "Should include pattern ID")
		//         assert.GreaterOrEqual(t, pattern.ConfidenceScore, 0.0, "Should have valid confidence score")
		//         assert.LessOrEqual(t, pattern.ConfidenceScore, 1.0, "Should have valid confidence score")
		//         assert.NotEmpty(t, pattern.SupportingTransactions, "Should include supporting transactions")
		//     }
		// }
	})
}

func TestAlertingEngineService_ManageAlerts_ShouldFailInitially(t *testing.T) {
	t.Skip("INTENTIONALLY FAILING: Alerting Engine Service not implemented yet (T013)")

	conn, err := grpc.Dial("alerting-engine:9003", grpc.WithInsecure())
	require.NoError(t, err)
	defer conn.Close()

	// client := alertpb.NewAlertingEngineServiceClient(conn)
	ctx := context.Background()

	t.Run("should retrieve alerts with filtering and pagination", func(t *testing.T) {
		// Test alert management - FR-014 from spec
		request := &alertpb.GetAlertsRequest{
			Filters: &alertpb.AlertFilters{
				Priority: []alertpb.Priority{alertpb.Priority_HIGH, alertpb.Priority_CRITICAL},
				Status:   []alertpb.AlertStatus{alertpb.AlertStatus_OPEN, alertpb.AlertStatus_INVESTIGATING},
				DateRange: &alertpb.TimeWindow{
					StartTime: time.Now().Add(-7 * 24 * time.Hour).Unix(), // Last 7 days
					EndTime:   time.Now().Unix(),
				},
				EntityIds: []string{"entity-123", "entity-456"},
			},
			Pagination: &alertpb.Pagination{
				Page:      1,
				PageSize:  50,
				SortBy:    "created_at",
				SortOrder: alertpb.SortOrder_DESCENDING,
			},
		}

		// response, err := client.GetAlerts(ctx, request)
		// assert.NoError(t, err, "Should retrieve alerts successfully")
		// assert.LessOrEqual(t, len(response.Alerts), 50, "Should respect page size")
		// assert.GreaterOrEqual(t, response.TotalCount, int64(len(response.Alerts)), "Total count should be at least returned count")
		//
		// // Verify all alerts match filters
		// for _, alert := range response.Alerts {
		//     assert.Contains(t, []alertpb.Priority{alertpb.Priority_HIGH, alertpb.Priority_CRITICAL},
		//         alert.Priority, "Should match priority filter")
		//     assert.Contains(t, []alertpb.AlertStatus{alertpb.AlertStatus_OPEN, alertpb.AlertStatus_INVESTIGATING},
		//         alert.Status, "Should match status filter")
		// }
	})

	t.Run("should update alert status and add investigation notes", func(t *testing.T) {
		// Test alert lifecycle management
		request := &alertpb.UpdateAlertRequest{
			AlertId: "alert-789",
			Updates: &alertpb.AlertUpdates{
				Status:     alertpb.AlertStatus_INVESTIGATING,
				AssignedTo: "analyst@aegisshield.com",
				Notes:      "Reviewing transaction patterns. Requested additional documentation from customer.",
				Priority:   alertpb.Priority_HIGH, // Escalated priority
			},
			UpdatedBy: "senior_analyst@aegisshield.com",
		}

		// response, err := client.UpdateAlert(ctx, request)
		// assert.NoError(t, err, "Should update alert successfully")
		// assert.Equal(t, alertpb.AlertStatus_INVESTIGATING, response.Alert.Status, "Should update status")
		// assert.Equal(t, "analyst@aegisshield.com", response.Alert.AssignedTo, "Should update assignment")
		// assert.NotEmpty(t, response.Alert.UpdateHistory, "Should include update history")
	})

	t.Run("should close alert with resolution", func(t *testing.T) {
		// Test alert closure
		request := &alertpb.CloseAlertRequest{
			AlertId: "alert-456",
			Resolution: &alertpb.AlertResolution{
				ResolutionType: alertpb.ResolutionType_FALSE_POSITIVE,
				Reason:         "Legitimate business transaction with proper documentation",
				Actions:        []string{"Updated customer risk profile", "Adjusted transaction limits"},
				ResolvedBy:     "compliance_manager@aegisshield.com",
			},
		}

		// response, err := client.CloseAlert(ctx, request)
		// assert.NoError(t, err, "Should close alert successfully")
		// assert.Equal(t, alertpb.AlertStatus_CLOSED, response.Alert.Status, "Should be closed")
		// assert.NotNil(t, response.Alert.Resolution, "Should include resolution")
		// assert.NotZero(t, response.Alert.ClosedAt, "Should set closure timestamp")
	})
}
